--- a/index.html
+++ b/index.html
@@ -146,32 +146,32 @@ table.vigor-table thead th {
 /* ===== Ajustes finos para celular ===== */
 @media (max-width: 700px) {
 
-    /* TÍTULO DO VOO */
+    /* TÍTULO DO VOO – sobe um pouco */
     #rgb-info-box {
-        top: 95px !important;       /* desce bastante para não bater no layers */
+        top: 75px !important;             /* era 95px */
         left: 50% !important;
         transform: translateX(-50%) !important;
         font-size: 12px !important;
         padding: 6px 10px !important;
         max-width: 85% !important;
-        z-index: 9999 !important;   /* fica sempre acima */
+        z-index: 9999 !important;
     }
 
-    /* CONTROLE DE LAYERS */
+    /* CONTROLE DE LAYERS – sobe junto com o título */
     .leaflet-top.leaflet-right .leaflet-control-layers {
-        margin-top: 150px !important;  /* empurra o painel de camadas para baixo */
+        margin-top: 115px !important;     /* era 150px */
         transform: scale(0.90) !important;
         z-index: 9999 !important;
     }
 
-    /* LOGO ECO MAP */
+    /* LOGO ECO MAP (mantemos como está) */
     #ecomap-logo {
         bottom: 5px !important;
         left: 5px !important;
     }
 
     #ecomap-logo img {
-        max-width: 80px !important; /* menor ainda */
+        max-width: 80px !important;
     }
 
     #ecomap-logo .ecomap-credit {
@@ -179,15 +179,16 @@ table.vigor-table thead th {
         padding: 3px 5px !important;
     }
 
-    /* DASHBOARD (ANÁLISES) */
+    /* DASHBOARD – sobe proporcionalmente */
     #analysis-dashboard {
-        bottom: 95px !important;     /* sobe para não encostar na logo */
+        bottom: 80px !important;          /* era 95px */
         right: 10px !important;
         width: 260px !important;
         max-height: 230px !important;
         font-size: 11px !important;
     }
 }
+
 
 /* === ROSA DOS VENTOS PARA ASPECTO (CENTRO DA TELA) === */
 #aspect-compass {
